@@ -40,6 +40,7 @@
         <activemq.version>5.12.1</activemq.version>
         <sonar.binaries>target/classes</sonar.binaries>
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco-ut.exec</sonar.jacoco.reportPath>
+        <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.scm.disabled>true</sonar.scm.disabled>
         <sonar.exclusions>
             **/validators/EbMS3MessageValidator.java, **/controller/AdminGUIController.java,
@@ -209,32 +210,19 @@
                     <version>3.0.1</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.sonarsource.scanner.maven</groupId>
-                    <artifactId>sonar-maven-plugin</artifactId>
-                    <version>5.1</version>
-                </plugin>
-                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.18.1</version>
                     <executions>
                         <execution>
                             <id>default-test</id>
-                            <phase>test</phase>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
                             <configuration>
                                 <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
                                     ${surefire.argLine}
                                 </argLine>
-                                <includes>
-                                    <include>**/*IT.java</include>
-                                    <include>**/IT*.java</include>
-                                    <include>**/*ITCase.java</include>
-                                    <include>**/Test*.java</include>
-                                    <include>**/*Test.java</include>
-                                    <include>**/*TestCase.java</include>
-                                </includes>
+                                <excludes>
+                                    <exclude>**/IT*.java</exclude>
+                                </excludes>
                             </configuration>
                         </execution>
                     </executions>
@@ -242,7 +230,31 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.18</version>
+                    <version>2.19.1</version>
+                    <executions>
+                        <execution>
+                            <id>integration-tests</id>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                            <configuration>
+                                <!-- Sets the VM argument line used when integration tests are run. -->
+                                <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
+                                    ${failsafeArgLine}
+                                </argLine>
+                                <!-- Skips integration tests if the value of skipITs property is true-->
+                                <skipTests>${skipITs}</skipTests>
+                            </configuration>
+                        </execution>
+                    </executions>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>2.19.1</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -275,8 +287,25 @@
                         <configuration>
                             <destFile>${sonar.jacoco.reportPath}</destFile>
                             <propertyName>surefire.argLine</propertyName>
+                            <append>true</append>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <id>pre-integration-test</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+                            <destFile>${sonar.jacoco.itReportPath}</destFile>
+                            <propertyName>failsafeArgLine</propertyName>
+                            <append>true</append>
+                        </configuration>
+                    </execution>
+
+
                 </executions>
             </plugin>
         </plugins>
